--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                 >
               </li>
               <li>
-                <a href="#"><i class="fas fa-phone"></i> +62 822-2304-6684</a>
+                <a href="https://wa.me/6282223046684"><i class="fas fa-phone"></i> +62 822-2304-6684</a>
               </li>
               <li>
                 <a href="#"
