--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div class="program-card fade-in-up">
             <div class="program-image">
               <img
-                src="assets/modul/kd.jpg"
+                src="assets/modul/komputer_dasar.jpg"
                 alt="Komputer Dasar"
               />
             </div>
@@ -151,7 +151,7 @@
           <div class="program-card fade-in-up">
             <div class="program-image">
               <img
-                src="assets/modul/dm.jpg"
+                src="assets/modul/digital_marketing.jpg"
                 alt="Digital Marketing"
               />
             </div>
@@ -176,7 +176,7 @@
           <div class="program-card fade-in-up">
             <div class="program-image">
               <img
-                src="assets/modul/cr.jpg"
+                src="assets/modul/content_creator.jpg"
                 alt="Content Creator"
               />
             </div>
@@ -208,7 +208,7 @@
           <!-- Program 4 -->
           <div class="program-card fade-in-up">
             <div class="program-image">
-              <img src="assets/modul/dg.jpg" alt="Desain grafis" />
+              <img src="assets/modul/desain_grafis.jpg" alt="Desain grafis" />
             </div>
             <div class="program-content">
               <h3>Desain Grafis</h3>
