--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     </section>
 
    <!-- About Section -->
+<!-- About Section -->
 <section id="about" class="about">
   <div class="container">
     <div class="section-title">
@@ -85,26 +86,26 @@
         <div class="carousel-container">
           <!-- Slide 1 -->
           <div class="carousel-slide active">
-            <img src="assets/2.jpg" alt="LKP NexGen 1" />
+            <img src="assets/2.jpg" alt="LKP NexGen 1" loading="lazy" />
           </div>
           <!-- Slide 2 -->
           <div class="carousel-slide">
-            <img src="assets/modul/kd.jpg" alt="LKP NexGen 2" />
+            <img src="assets/modul/kd.jpg" alt="LKP NexGen 2" loading="lazy" />
           </div>
           <!-- Slide 3 -->
           <div class="carousel-slide">
-            <img src="assets/modul/dm.jpg" alt="LKP NexGen 3" />
+            <img src="assets/modul/dm.jpg" alt="LKP NexGen 3" loading="lazy" />
           </div>
           <!-- Slide 4 -->
           <div class="carousel-slide">
-            <img src="assets/modul/cr.jpg" alt="LKP NexGen 4" />
+            <img src="assets/modul/cr.jpg" alt="LKP NexGen 4" loading="lazy" />
           </div>
           <!-- Slide 5 -->
           <div class="carousel-slide">
-            <img src="assets/modul/dg.jpg" alt="LKP NexGen 5" />
+            <img src="assets/modul/dg.jpg" alt="LKP NexGen 5" loading="lazy" />
           </div>
 
-          <!-- Navigation Arrows - HAPUS onclick, sudah di handle di JS -->
+          <!-- Navigation Arrows -->
           <button class="carousel-nav prev" aria-label="Previous Slide">
             <i class="fas fa-chevron-left"></i>
           </button>
@@ -112,7 +113,7 @@
             <i class="fas fa-chevron-right"></i>
           </button>
 
-          <!-- Dots - HAPUS onclick, sudah di handle di JS -->
+          <!-- Dots -->
           <div class="carousel-controls">
             <span class="carousel-dot active" data-slide="0" aria-label="Go to slide 1"></span>
             <span class="carousel-dot" data-slide="1" aria-label="Go to slide 2"></span>
