--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <!-- Slide 2 -->
           <div class="carousel-slide">
-            <img src="assets/3.jpg" alt="LKP NexGen 2" loading="lazy" />
+            <img src="assets/modul/kd.jpg" alt="LKP NexGen 2" loading="lazy" />
           </div>
           <!-- Slide 3 -->
           <div class="carousel-slide">
