--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="about-carousel">
         <div class="carousel-container">
           <!-- Slide 1 -->
-          <div class="carousel-slide">
+          <div class="carousel-slide active">
             <img src="assets/2.jpg" alt="LKP NexGen 1" loading="lazy" />
           </div>
           <!-- Slide 2 -->
