--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     />
 
     <link rel="stylesheet" href="style/css/style.css" />
+    <link rel="stylesheet" href="style/css/carousel.css" />
+
   </head>
   <body>
     <!-- Header & Navigation -->
