--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
             <img src="assets/logo.png" alt="Logo" />
             <span
               style="
-                background-color: var(
-                  --yellow-primary
-                ); /* pakai variabel warna tema */
-                color: var(--blue-primary); /* teks biru sesuai tema */
-                padding-left: 20px;
+                /* pakai variabel warna tema */
+                color: var(--yellow-primary); /* teks biru sesuai tema */
                 padding-right: 20px;
-                border-radius: 50%;
-                font-size: 90%
+                font-size: 110%
               "
               >LKP NEXGEN</span
             >
