--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
     <link rel="stylesheet" href="style/css/style.css" />
     <link rel="stylesheet" href="style/css/carousel.css" />
-
   </head>
   <body>
     <!-- Header & Navigation -->
@@ -24,13 +23,7 @@
         <nav>
           <a href="#" class="logo">
             <img src="assets/logo.png" alt="Logo" />
-            <span
-              style="
-                padding-right: 20px;
-                font-size: 110%
-              "
-              >LKP NEXGEN</span
-            >
+            <span style="padding-right: 20px; font-size: 110%">LKP NEXGEN</span>
           </a>
 
           <ul class="nav-links">
@@ -69,88 +62,124 @@
       </div>
     </section>
 
-   <!-- About Section -->
-<!-- About Section -->
-<section id="about" class="about">
-  <div class="container">
-    <div class="section-title">
-      <h2>Tentang Kami</h2>
-    </div>
-    <div class="about-content">
-      <!-- Carousel -->
-      <div class="about-carousel">
-        <div class="carousel-container">
-          <!-- Slide 1 -->
-          <div class="carousel-slide active">
-            <img src="assets/2.jpg" alt="LKP NexGen 1" loading="lazy" />
-          </div>
-          <!-- Slide 2 -->
-          <div class="carousel-slide">
-            <img src="assets/modul/kd.jpg" alt="LKP NexGen 2" loading="lazy" />
-          </div>
-          <!-- Slide 3 -->
-          <div class="carousel-slide">
-            <img src="assets/modul/dm.jpg" alt="LKP NexGen 3" loading="lazy" />
-          </div>
-          <!-- Slide 4 -->
-          <div class="carousel-slide">
-            <img src="assets/modul/cr.jpg" alt="LKP NexGen 4" loading="lazy" />
-          </div>
-          <!-- Slide 5 -->
-          <div class="carousel-slide">
-            <img src="assets/modul/dg.jpg" alt="LKP NexGen 5" loading="lazy" />
+    <!-- About Section -->
+    <!-- About Section -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="section-title">
+          <h2>Tentang Kami</h2>
+        </div>
+        <div class="about-content">
+          <!-- Carousel -->
+          <div class="about-carousel">
+            <div class="carousel-container">
+              <!-- Slide 1 -->
+              <div class="carousel-slide active">
+                <img src="assets/2.jpg" alt="LKP NexGen 1" loading="lazy" />
+              </div>
+              <!-- Slide 2 -->
+              <div class="carousel-slide">
+                <img
+                  src="assets/modul/kd.jpg"
+                  alt="LKP NexGen 2"
+                  loading="lazy"
+                />
+              </div>
+              <!-- Slide 3 -->
+              <div class="carousel-slide">
+                <img
+                  src="assets/modul/dm.jpg"
+                  alt="LKP NexGen 3"
+                  loading="lazy"
+                />
+              </div>
+              <!-- Slide 4 -->
+              <div class="carousel-slide">
+                <img
+                  src="assets/modul/cr.jpg"
+                  alt="LKP NexGen 4"
+                  loading="lazy"
+                />
+              </div>
+              <!-- Slide 5 -->
+              <div class="carousel-slide">
+                <img
+                  src="assets/modul/dg.jpg"
+                  alt="LKP NexGen 5"
+                  loading="lazy"
+                />
+              </div>
+
+              <!-- Navigation Arrows -->
+              <button class="carousel-nav prev" aria-label="Previous Slide">
+                <i class="fas fa-chevron-left"></i>
+              </button>
+              <button class="carousel-nav next" aria-label="Next Slide">
+                <i class="fas fa-chevron-right"></i>
+              </button>
+
+              <!-- Dots -->
+              <div class="carousel-controls">
+                <span
+                  class="carousel-dot active"
+                  data-slide="0"
+                  aria-label="Go to slide 1"
+                ></span>
+                <span
+                  class="carousel-dot"
+                  data-slide="1"
+                  aria-label="Go to slide 2"
+                ></span>
+                <span
+                  class="carousel-dot"
+                  data-slide="2"
+                  aria-label="Go to slide 3"
+                ></span>
+                <span
+                  class="carousel-dot"
+                  data-slide="3"
+                  aria-label="Go to slide 4"
+                ></span>
+                <span
+                  class="carousel-dot"
+                  data-slide="4"
+                  aria-label="Go to slide 5"
+                ></span>
+              </div>
+            </div>
           </div>
 
-          <!-- Navigation Arrows -->
-          <button class="carousel-nav prev" aria-label="Previous Slide">
-            <i class="fas fa-chevron-left"></i>
-          </button>
-          <button class="carousel-nav next" aria-label="Next Slide">
-            <i class="fas fa-chevron-right"></i>
-          </button>
-
-          <!-- Dots -->
-          <div class="carousel-controls">
-            <span class="carousel-dot active" data-slide="0" aria-label="Go to slide 1"></span>
-            <span class="carousel-dot" data-slide="1" aria-label="Go to slide 2"></span>
-            <span class="carousel-dot" data-slide="2" aria-label="Go to slide 3"></span>
-            <span class="carousel-dot" data-slide="3" aria-label="Go to slide 4"></span>
-            <span class="carousel-dot" data-slide="4" aria-label="Go to slide 5"></span>
+          <!-- About Text -->
+          <div class="about-text">
+            <h3>Lembaga Kursus dan Pelatihan Terpercaya dan Profesional</h3>
+            <p>
+              LKP NexGen adalah LKP profesional dengan komitmen untuk memberikan
+              pendidikan dan pelatihan berkualitas tinggi yang sesuai dengan
+              kebutuhan industri.
+            </p>
+            <p>
+              Kami memiliki instruktur berpengalaman, dan kurikulum yang terus
+              diperbarui untuk memastikan peserta didik kami siap menghadapi
+              tantangan dunia kerja.
+            </p>
+            <div class="about-stats">
+              <div class="stat">
+                <span class="stat-number">1000+</span>
+                <span class="stat-text">Peserta Terlatih</span>
+              </div>
+              <div class="stat">
+                <span class="stat-number">15+</span>
+                <span class="stat-text">Program Unggulan</span>
+              </div>
+              <div class="stat">
+                <span class="stat-number">95%</span>
+                <span class="stat-text">Tingkat Kelulusan</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-
-      <!-- About Text -->
-      <div class="about-text">
-        <h3>Lembaga Kursus dan Pelatihan Terpercaya dan Profesional</h3>
-        <p>
-          LKP NexGen adalah LKP profesional dengan komitmen untuk memberikan
-          pendidikan dan pelatihan berkualitas tinggi yang sesuai dengan
-          kebutuhan industri.
-        </p>
-        <p>
-          Kami memiliki instruktur berpengalaman, dan kurikulum yang terus
-          diperbarui untuk memastikan peserta didik kami siap menghadapi
-          tantangan dunia kerja.
-        </p>
-        <div class="about-stats">
-          <div class="stat">
-            <span class="stat-number">1000+</span>
-            <span class="stat-text">Peserta Terlatih</span>
-          </div>
-          <div class="stat">
-            <span class="stat-number">15+</span>
-            <span class="stat-text">Program Unggulan</span>
-          </div>
-          <div class="stat">
-            <span class="stat-number">95%</span>
-            <span class="stat-text">Tingkat Kelulusan</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Programs Section -->
     <section id="programs" class="programs">
@@ -303,7 +332,7 @@
           <div class="slide">
             <div class="testimonial-card">
               <p class="testimonial-text">
-                Pelatihan di  LKP-NexGen Kebumen saat itu benar-benar berkesan
+                Pelatihan di LKP-NexGen Kebumen saat itu benar-benar berkesan
                 dan membuka wawasan saya. Materi yang diajarkan sangat praktikal
                 dan langsung bisa diterapkan, bukan cuma teori di atas kertas.
                 Para mentornya pun juga asyik dan sabar banget, jadi kita yang
@@ -409,7 +438,7 @@
           <div class="slide">
             <div class="testimonial-card">
               <p class="testimonial-text">
-                Pelatihan digital marketing di  LKP-NexGen sangat bermanfaat dan
+                Pelatihan digital marketing di LKP-NexGen sangat bermanfaat dan
                 membantu saya memahami konsep-konsep digital marketing yang
                 terbaru. Materi yang disampaikan sangat relevan dan instruktur
                 yang berpengalaman membuat saya lebih mudah memahami strategi
@@ -541,9 +570,14 @@
                   ><i class="fas fa-chevron-right"></i> Desain Grafis</a
                 >
               </li>
+              <li>
+                <a href="#"
+                  ><i class="fas fa-chevron-right"></i> Content Creator</a
+                >
+              </li>
             </ul>
           </div>
-         
+
           <div class="footer-column">
             <h3>Link Cepat</h3>
             <ul class="footer-links">
@@ -572,7 +606,7 @@
               </li>
             </ul>
           </div>
-           <div class="footer-column">
+          <div class="footer-column">
             <h3>Kontak</h3>
             <ul class="footer-links">
               <li>
@@ -582,7 +616,9 @@
                 >
               </li>
               <li>
-                <a href="https://wa.me/6282223046684"><i class="fas fa-phone"></i> +62 822-2304-6684</a>
+                <a href="https://wa.me/6282223046684"
+                  ><i class="fas fa-phone"></i> +62 822-2304-6684</a
+                >
               </li>
               <li>
                 <a href="#"
